--- a/image_description_app/docker-compose.yaml
+++ b/image_description_app/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
       - db-image-processing
     command: [postgres]
 
-  alembic-service:
+  db_maintenance:
     build: ./db_maintenance
     depends_on:
       - db-image-processing
@@ -48,7 +48,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - alembic-models:/app/db_models # mount db models for alembic
-    command: ["python", "main.py"]
+
 
   pgadmin:
     image: dpage/pgadmin4:latest
