--- a/image_description_app/Makefile
+++ b/image_description_app/Makefile
@@ -14,8 +14,8 @@ PYTHON_COMMAND := python -m main
 build:
 	$(SUDO) docker compose -f $(COMPOSE_FILE) build
 
-up-build:
-	$(SUDO) docker compose -f $(COMPOSE_FILE) up -d --build --remove-orphans
+# up-build:
+# 	$(SUDO) docker compose -f $(COMPOSE_FILE) up -d --build --remove-orphans
 
 stop:
 	$(SUDO) docker compose -f $(COMPOSE_FILE) stop
@@ -23,12 +23,22 @@ stop:
 down:
 	$(SUDO) docker compose -f $(COMPOSE_FILE) down
 
+# Очистка образов db_maintenance перед up-build
+before-up-build:
+	@echo "Checking for images ending with $(SERVICE_NAME)"
+
+	@sudo docker images | grep "$(SERVICE_NAME)" | awk '{print $$3}' | xargs -r sudo docker rmi -f
+
 # Цели для запуска Alembic
 pg-primary-setup:
-	$(SUDO) docker compose -f $(COMPOSE_FILE) run $(SERVICE_NAME) $(PYTHON_COMMAND) setup_primary --no-cache
+	$(SUDO) docker compose -f $(COMPOSE_FILE) --profile db_maintenance_tasks run --rm $(SERVICE_NAME) $(PYTHON_COMMAND) setup_primary --no-cache
 
 pg-replica-setup:
-	$(SUDO) docker compose -f $(COMPOSE_FILE) run $(SERVICE_NAME) $(PYTHON_COMMAND) setup_replica
+	$(SUDO) docker compose -f $(COMPOSE_FILE) --profile db_maintenance_tasks run --rm  $(SERVICE_NAME) $(PYTHON_COMMAND) setup_replica --no-cache
 
 migrate-primary:
-	$(SUDO) docker compose -f $(COMPOSE_FILE) run $(SERVICE_NAME) $(PYTHON_COMMAND) run_migrations
+	$(SUDO) docker compose -f $(COMPOSE_FILE) --profile db_maintenance_tasks run --rm $(SERVICE_NAME) $(PYTHON_COMMAND) run_migrations
+
+# Переопределяем up-build, чтобы сначала чистить образы
+up-build: before-up-build
+	$(SUDO) docker compose -f $(COMPOSE_FILE) up -d --build --remove-orphans
